# ZnDraw

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  BACKEND_COMPLETE.md  CODE_ANALYSIS.md  DEPLOYMENT.md  DRAG_DROP_PLAN.md  Dockerfile  EXTENSION_ARCHITECTURE.md  FRONTEND_COMPLETE.md  FULL_IMPLEMENTATION_SUMMARY.md  GEOMETRY_NORMALIZATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  JOIN_REFACTORING_PLAN.md  JWT_AUTH_PLAN.md  PLOTLY_INTERACTIONS_COMPLETE.md  PLOT_OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_PLAN.md  SELECTION_GROUPING_DESIGN.md  SELECTION_GROUPS_UI_PLAN.md  USER_ROOM_SOCKET.md  ZNDRAW_GEOMETRIES.md  actions.md  bmim.json  chat.md  cli-design.md  communication.md  custom-json-schema.md  docker-compose.yaml  editing.md  filesystem-read.md  floorplan.md  frontend-issues.md  gunicorn_config.py  hatch_build.py  index-mapping.md  (+27 more)
.claude/agents/: docker-tester.md  frontend-tester.md
.github/workflows/: publish.yaml  test.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: .gitignore  bun.lockb  decs.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
app/src/: App.css  App.tsx  AppWithTheme.tsx  formStore.ts  index.css  main.tsx  roomsStore.tsx  socket.ts  socket.tsx  store.tsx
docker/: README.md  docker-compose.with-templates.yaml  docker-compose.yaml
docker-testing/: DEV-README.md  docker-compose.dev.yaml
docker/dev/: docker-compose.yaml
docker/nginx/: Dockerfile  nginx.conf
docker/production/: Caddyfile  README.md  docker-compose.yaml  ethanol.xyz  load_template.py  nginx.conf
docker/standalone/: .env  README.md  docker-compose.yaml  ethanol.xyz  s22.xyz
docker/templates/: .env
docker/zndraw/: Dockerfile  docker-compose.yaml  gunicorn_config.py  wsgi.py
docs/: PLOTLY_INTERACTIONS.md
docs/plans/: 2026-02-24-progress-bar-design.md  2026-02-24-progress-bar-plan.md  2026-02-26-constraint-visualization-design.md  2026-02-26-constraint-visualization-plan.md  2026-02-26-default-camera-design.md
docs/source/: adventofcode.rst  conf.py  developer-guide.rst  index.rst  keyboard-shortcuts.rst  python-api.rst  ui-guide.rst
examples/: md.ipynb  molecules.ipynb  plotly_interactions_demo.py  stress_testing.py
examples/stress_testing/: README.md  multi_connection.py  single_connection.py
frontend/: README.md  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: camera-session.spec.ts  chat-features.spec.ts  constraint-visualization.spec.ts  dockview-layout.spec.ts  docs-screenshots.spec.ts  editing.spec.ts  extensions-analysis.spec.ts  frame-invalidation.spec.ts  frames-navigation.spec.ts  geometry-drawing.spec.ts  helpers.ts  pr920-fixes.spec.ts  registration.spec.ts  socket-sync.spec.ts  ui-panels-chat.spec.ts
frontend/src/: App.tsx  MuiCssVars.tsx  formStore.ts  index.css  index.html  roomsStore.tsx  socket.ts  store.tsx  test-setup.ts
misc/: Sockets.md  conftest.py  redis.md  test_screenshots.py
paper/: bibliography.bib  paper.md
skills/zndraw/: SKILL.md
src/: client.py  server.py
src/zndraw/: .gitignore  __init__.py  _client_legacy.py  accessors.py  analytics.py  api_manager.py  app.py  auth.py  auth_utils.py  bookmarks_manager.py  broker.py  cli.py  cli_entry.py  client.py  config.py  connectivity.py  database.py  dependencies.py  enrichment.py  exceptions.py  executor.py  figures_manager.py  frame_cache.py  io.py  job.py  job_executor.py  lock.py  materials.py  metadata_manager.py  models.py  msgpack_utils.py  redis.py  responses.py  result_backends.py  room_templates.py  scene_manager.py  schemas.py  screenshot_manager.py  server.py  server_manager.py  (+14 more)
src/zndraw-mcp/: README.md  __init__.py
src/zndraw_auth/: __init__.py  admin.py  cli_login.py  db.py  schemas.py  settings.py  users.py
src/zndraw_cli/: __init__.py  celery.py  cli.py
src/zndraw_joblib/: __init__.py  client.py  dependencies.py  events.py  exceptions.py  models.py  provider.py  registry.py  router.py  schemas.py  settings.py  sweeper.py
tests/: __test_zndraw.py  conftest.py  server_provider.py  test_accessor_presets.py  test_active_camera.py  test_admin_auth.py  test_admin_service.py  test_analysis.py  test_analytics.py  test_auth.py  test_auth_integration.py  test_auto_discovery.py  test_bond_order_visualization.py  test_bookmarks.py  test_camera.py  test_camera_model.py  test_camera_sync.py  test_camera_validation.py  test_chat.py  test_check_lock_decorator.py  test_chunked_upload.py  test_chunked_upload_exceptions.py  test_circle_curve.py  test_cli.py  test_cli_admin.py  test_cli_auth.py  test_cli_port_features.py  test_cli_room_naming.py  test_client.py  test_client_api.py  test_client_integration.py  test_client_server.py  test_client_settings.py  test_client_source.py  test_client_token_discovery.py  test_config.py  test_connectivity.py  test_connectivity_threshold.py  test_constraints.py  test_data.py  (+135 more)
tests/frames/: conftest.py  test_frames_utils.py
tests/services/: test_client_service.py  test_room_service.py
tests/test_cli_agent/: conftest.py  test_auth.py  test_bookmarks.py  test_chat.py  (+8 more)
zndraw/: __init__.py  __init__.pyi  abc.py  analyse.py  app.py  base.py  cli.py  config.py  converter.py  data.py  drawing.py  examples.py  exceptions.py  figure.py  frame.py  globals.py  io.py  main.py  make_celery.py  package-lock.json  queue.py  scene.py  selection.py  settings.py  shared.py  standalone.py  tasks.py  type_defs.py  upload.py  utils.py  view.py  viewer.py  zndraw.py  zndraw_frozen.py  zndraw_worker.py
zndraw_app/: README.md  __init__.py  cli.py  healthcheck.py  make_celery.py
zndraw_communication/: __init__.py  cli.py  client.py  server.py  storage.py
(+835 files in other folders)
