[project]
name = "zndraw"
dynamic = ["version"]
description = "ZnDraw"
license = { file = "LICENSE" }
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
    { name = "Rokas Elijošius", email = "re344@cam.ac.uk" },
    { name = "Paul Hohenberger"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "ase>=3.26.0",
    "asebytes>=0.1.7",
    "cachetools>=6.2.0",
    "celery>=5.5.3",
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "fsspec>=2025.10.0",
    "lmdb>=1.7.5",
    "msgpack>=1.1.1",
    "msgpack-numpy>=0.4.8",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.8.0",
    "pyjwt>=2.10.1",
    "python-socketio[client]>=5.13.0",
    "redis>=6.4.0",
    "rich>=14.1.0",
    "splines>=0.3.3",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "vesin>=0.3.8",
    "znh5md>=0.4.8",
    "znsocket>=0.3.0",
    "prometheus-client>=0.23.1",
    "pymongo>=4.10.0",
    "dnspython>=2.8.0",
]

[project.optional-dependencies]
full = ["molify>=0.2.1"]

[dependency-groups]
dev = [
    "fastmcp>=2.12.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "molify>=0.2.1",
    "pytest-cov>=7.0.0",
    "hatchling>=1.28.0",
    "hatch-vcs>=0.5.0",
]
docs = [
    "furo>=2025.9.25",
    "nbsphinx>=0.9.8",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.0",
    "sphinxcontrib-mermaid>=1.2.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/zincware/ZnDraw"
Releases = "https://github.com/zincware/ZnDraw/releases"
Discord = "https://discord.gg/7ncfwhsnm4"
Documentation = "https://zndraw.readthedocs.io/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/zndraw/_version.py"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["src/zndraw", "src/zndraw_cli"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
    "app/node_modules",
    "dist",
    ".git",
    ".vscode",
    ".claude",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
    "app/node_modules",
    "dist",
    ".git",
    ".vscode",
    ".claude",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["I"]

[tool.codespell]
skip = "*.lock,bun.lock,todo.md,*.svg"
ignore-words-list = "nwo,nd,smove"

[project.scripts]
zndraw = "zndraw_cli.cli:app"
