[project]
name = "zndraw"
dynamic = ["version"]
description = "ZnDraw - Interactive visualization for atomistic simulations"
license = { file = "LICENSE" }
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
    { name = "Rokas Elijošius", email = "re344@cam.ac.uk" },
    { name = "Paul Hohenberger"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "ase>=3.27.0",
    "asebytes[lmdb,h5md]>=0.2.0",
    "fakeredis>=2.33.0",
    "fastapi>=0.128.0",
    "lmdb>=1.5.0",
    "msgpack>=1.0.0",
    "msgpack-numpy>=0.4.8",
    "networkx>=3.6.1",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.18",
    "python-socketio[asyncio_client,client]>=5.16.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "splines>=0.3.3",
    "sqlalchemy[asyncio, aiosqlite]>=2.0.46",
    "sqlmodel>=0.0.31",
    "sse-starlette>=3.0.0",
    "zndraw-joblib>=0.1.2",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "vesin>=0.4.2",
    "zndraw-auth>=0.2.2",
    "zndraw-socketio>=0.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "rich>=14.3.1",
    "molify>=0.2.2",
    "znh5md>=0.4.8",
    "fsspec>=2023",
    "tqdm>=4.67.3",
]

[project.scripts]
zndraw = "zndraw.cli:app"
zndraw-cli = "zndraw.cli_agent:app"
zndraw-db = "zndraw.cli:db_app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/zndraw/_version.py"

[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.wheel]
packages = ["src/zndraw"]
artifacts = ["src/zndraw/static/"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/*.pyc",
    "**/.DS_Store",
    "app/node_modules",
    "dist",
    ".git",
    ".vscode",
    ".claude",
]

[project.optional-dependencies]
full = ["molify>=0.2.2"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ipykernel>=7.1.0",
    "numpy>=2.4.1",
    "playwright>=1.55.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
docs = [
    "furo>=2025.9.25",
    "nbsphinx>=0.9.8",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.0",
    "sphinxcontrib-mermaid>=1.2.3",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PT",     # flake8-pytest-style
    "PERF",   # perflint (performance)
    "TCH",    # flake8-type-checking
    "FA",     # flake8-future-annotations
    "FAST",   # FastAPI-specific rules
    "PIE",    # flake8-pie (misc lints)
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "TRY",    # tryceratops (exception handling)
    "FLY",    # flynt (f-string conversion)
    "LOG",    # flake8-logging
    "DTZ",    # flake8-datetimez (timezone aware datetimes)
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PGH",    # pygrep-hooks
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "EM",     # flake8-errmsg
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "Q",      # flake8-quotes
    "T20",    # flake8-print
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "BLE",    # flake8-blind-except
    "N",      # pep8-naming
]
ignore = [
    "S101",    # assert used (needed for pytest)
    "S104",    # binding to 0.0.0.0 (expected for servers)
    "S105",    # hardcoded password (false positive for token literals in tests)
    "S106",    # hardcoded password (false positive for token_type="bearer")
    "S108",    # insecure temp file (false positive for test fixtures)
    "TRY003",  # avoid long messages outside exception class (too strict)
    "EM101",   # raw string in exception (allow for simplicity)
    "EM102",   # f-string in exception (allow for simplicity)
    "FBT001",  # boolean positional arg (common in FastAPI)
    "FBT002",  # boolean default arg (common in FastAPI)
    "COM812",  # trailing comma missing (conflicts with formatter)
    "ISC001",  # implicit string concat (conflicts with formatter)
]
fixable = ["ALL"]
unfixable = [
    "T20",     # print statements - require manual review
    "F841",    # unused variables - might be intentional
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-decorators = ["pydantic.validate_call"]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlmodel.SQLModel"]

[tool.ruff.lint.isort]
known-first-party = ["zndraw"]
combine-as-imports = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator", "pydantic.root_validator"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pylint]
max-args = 10  # Allow up to 10 args for FastAPI endpoints

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # unused function argument (fixtures)
    "S106",    # hardcoded password in tests
    "S105",    # hardcoded password string in tests
    "PLR2004", # magic values in tests are OK
]
"__init__.py" = [
    "F401",    # unused imports in __init__.py (re-exports)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

